--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head><title>YOUNGCHRIS BLOG </title></head>
+<p bgcolor="blue" width="50px" align="centre"> YOUNGCHRIS BLOG </p>
+<div bgcolor="green" class="topnav"
+ <a class="active"
+href="#home">home</a>
+<a href="#about">About</a>
+<a href="#contact">Contact</a>
+<a href="#news">News</a>
+<a href="entertainment">Entertainment
+<ul>
+<li> href="#movies">movies</a>
+<a href="#lol">lol</a>
+<--!-->
