--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head> <title> YOUNGCHRIS BLOG </title></head>
 <body>
 <div>
-background-color ="blue"
+bgcolor ="blue"
 align="center" width="100px YOUNGCHRIS BLOG</div>
 </body>
