--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> <title> YOUNGCHRIS BLOG </title></head>
 <body>
-<div>
-bgcolor ="blue"
-align="center" width="100px YOUNGCHRIS BLOG</div>
+<di
+bgcolor ="#000000">
+<p align="center"> YOUNGCHRIS BLOG </p></div>
 </body>
