--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head> <title> YOUNGCHRIS BLOG </title></head>
 <body>
 <div
-bgcolour ="#000000">
+bgcolor ="#000000">
 <p align="center"> YOUNGCHRIS BLOG </p></div>
 </body>
