--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head> <title> YOUNGCHRIS BLOG </title></head>
-<body>
-<div
-bgcolor ="green"
+<body bgcolor="#00FF00">
 <p align="center"> YOUNGCHRIS BLOG </p></div>
 </body>
