--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head> <title> YOUNGCHRIS BLOG </title></head>
+<head> <title> YOUNGCHRIS Blog</title></head>
 <body bgcolor="#00FF00">
-<p align="center"> YOUNGCHRIS BLOG </p></div>
+<p align="center" font-size="90%"> 𝕐𝕆𝕌ℕ𝔾ℂℍℝ𝕀𝕊 𝔼ℕ𝕋 </p></div>
+
 </body>
