--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <head> <title> YOUNGCHRIS Blog</title></head>
 <body bgcolor="#00FF00">
 <p align="center" font-size="90%"> 𝕐𝕆𝕌ℕ𝔾ℂℍℝ𝕀𝕊 𝔼ℕ𝕋 </p></div>
-<aside><strong> Share all the posts here to your lovely ones and friends</strong></aside>
+<article>
+<aside><strong> Share all the posts here <br/>to your lovely ones<br/> and friends</strong></aside>
 </body>
