--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head> <title> YOUNGCHRIS Blog</title></head>
-<body bgcolor="#00FF00">
-<p align="center" font-size="90%"> 𝕐𝕆𝕌ℕ𝔾ℂℍℝ𝕀𝕊 𝔼ℕ𝕋 </p></div>
-<article>
-<aside><strong> Share all the posts here <br/>to your lovely ones<br/> and friends</strong></aside>
+<div class="topnav" id="myTopnav">
+      <a href="#home"
+      class="active">Home</a>
+      <a href="#Health talk>Health Talk</a>
+      <a href="#Contact">Contact</a>
+      <div class="dropdown">
+    <button class="dropbtn">Entertainment
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#movies.html">Movies</a>
+      <a href="#videos.html">Videos</a>
+      <a href="#music.html">Music</a>
+    </div>
+  </div> 
+  <a href="#about.html">About</a>
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
+<body bgcolor="white">
+  <p align="center" font-size="90%"> 𝕐𝕆𝕌ℕ𝔾ℂℍℝ𝕀𝕊 𝔼ℕ𝕋 </p></div>
+ <br/>
+  <br/>
+   <br/>
+  <b> Welcome to Youngchris Blog , a fun place where we display fun things which include comedies, movies , healthy talks etc <b>
 </body>
+</html>
