--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head> <title> YOUNGCHRIS Blog</title></head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="mafo.css">
 <div class="topnav" id="myTopnav">
       <a href="#home"
       class="active">Home</a>
