--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
   </div> 
   <a href="#about.html">About</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
 </div>
 <body bgcolor="white">
   <p align="center" font-size="90%"> 𝕐𝕆𝕌ℕ𝔾ℂℍℝ𝕀𝕊 𝔼ℕ𝕋 </p></div>
