--- a/index.html
+++ b/index.html
@@ -8,27 +8,18 @@
       class="active">Home</a>
       <a href="#Health talk>Health Talk</a>
       <a href="#Contact">Contact</a>
-      <div class="dropdown">
+ <div class="dropdown">
     <button class="dropbtn">Entertainment
       <i class="fa fa-caret-down"></i>
     </button>
-    <div class="dropdown-content">
+ <div class="dropdown-content">
       <a href="#movies.html">Movies</a>
       <a href="#videos.html">Videos</a>
       <a href="#music.html">Music</a>
     </div>
   </div> 
   <a href="#about.html">About</a>
-  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="my.js">&#9776;</a>
 </div>
 <body bgcolor="white">
   <p align="center" font-size="90%"> 𝕐𝕆𝕌ℕ𝔾ℂℍℝ𝕀𝕊 𝔼ℕ𝕋 </p></div>
