--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="mafo.css">
 <div class="topnav" id="myTopnav">
-      <a href="#home"
-      class="active">Home</a>
-      <a href="#Health talk>Health Talk</a>
-      <a href="#Contact">Contact</a>
- <div class="dropdown">
+  <a href="home.html" class="active">Home</a>
+  <a href="news.html">News</a>
+  <a href="contact.html">Contact</a>
+  <div class="dropdown">
     <button class="dropbtn">Entertainment
       <i class="fa fa-caret-down"></i>
     </button>
- <div class="dropdown-content">
-      <a href="#movies.html">Movies</a>
-      <a href="#videos.html">Videos</a>
-      <a href="#music.html">Music</a>
+    <div class="dropdown-content">
+      <a href="movies.html">Movies</a>
+      <a href="videos.html">Videos</a>
+      <a href="music.html">Music</a>
     </div>
   </div> 
-  <a href="#about.html">About</a>
+  <a href="about.html">About</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="my.js">&#9776;</a>
 </div>
 <body bgcolor="white">
