--- a/index.html
+++ b/index.html
@@ -15,14 +15,40 @@
 }
 </style>
 </head>
+  display: block
+}
 
+#myMenu li a:hover {
+  background-color: #eee;
+}
+</style>
+</head>
+<body>
+
+
+<div class="row">
+  <div class="left" style="background-color:#bbb;">
+    <h2>Menu</h2>
+    <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
+    <ul id="myMenu">
+      <li><a href="#">Healthy talks</a></li>
+      <li><a href="#">Music</a></li>
+      <li><a href="#">Movies</a></li>
+      <li><a href="#">Anime</a></li>
+      <li><a href="#">comingsoon</a></li>
+      <li><a href="#">comingsoon</a></li>
+      <li><a href="#">comingsoon</a></li>
+      <li><a href="#">comingsoon</a></li>
+      <li><a href="#">comingsoon</a></li>
+    </ul>
+  </div>
+  
  <body style="background-color:powderblue;">
 
 
 <h1> <center> YOUNGCHRIS ENT</center> </h1>
 <hr>
 </hr>
-<meta name="propeller" content="c3329f693ad122a24e2b9cd3572f25a9">
 
 <!DOCTYPE html>
 <html>
